java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/ExceptionWrongDot.java
class Foo {
  /**
   * <warning descr="'@throws' tag description is missing">@throws</warning> RuntimeException<error descr="Identifier expected">.</error>
   */
  void foo() {
  }
}